--- a/Cpp-Module_00/ex01/Makefile
+++ b/Cpp-Module_00/ex01/Makefile
@@ -6,13 +6,14 @@
 #    By: jhapke <jhapke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/22 14:35:22 by jhapke            #+#    #+#              #
-#    Updated: 2025/07/08 12:24:23 by jhapke           ###   ########.fr        #
+#    Updated: 2025/08/04 15:29:44 by jhapke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME= phonebook
 
 SRC= PhoneBook.cpp \
+	Contact.cpp \
 	main.cpp
 
 OBJ= $(SRC:.cpp=.o)
