--- a/Cpp-Module_02/ex00/Makefile
+++ b/Cpp-Module_02/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: johnhapke <johnhapke@student.42.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/08/29 08:01:51 by johnhapke         #+#    #+#              #
-#    Updated: 2025/09/01 13:58:07 by johnhapke        ###   ########.fr        #
+#    Updated: 2025/09/05 10:28:10 by johnhapke        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-Name= fix
+NAME= fix
 
 SRC= main.cpp \
 	Fixed.cpp
@@ -18,13 +18,12 @@ SRC= main.cpp \
 OBJ = $(SRC:.cpp=.o)
 
 FLAGS= -Wall -Werror -Wextra -std=c++98
-
 CC= c++
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-		$(CC) $(FLAGS) -$(OBJ) -o $(NAME)
+		$(CC) $(FLAGS) $(OBJ) -o $(NAME)
 
 %.o: %.cpp
 		$(CC) $(FLAGS) -c $< -o $@
