--- a/Cpp-Module_03/ex02/Makefile
+++ b/Cpp-Module_03/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: johnhapke <johnhapke@student.42.fr>        +#+  +:+       +#+         #
+#    By: jhapke <jhapke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2026/01/05 15:04:03 by johnhapke         #+#    #+#              #
-#    Updated: 2026/01/06 17:17:31 by johnhapke        ###   ########.fr        #
+#    Updated: 2026/01/07 13:15:40 by jhapke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
